--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h1>QAQ</h1>
+  <p><strong>What should you do?</strong></p>
+  <p>You can try again.</p>
 </div>
